# madox

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
madox/: __init__.py  _version.py
madox/_static/: style.css
madox/ext/: ipython_directive.py  regex_lexer.py
