[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "madox"
description = "Simplify and abstract common Sphinx configurations"
authors = [{name = "Kosio Karchev", email = "kosiokarchev@gmail.com"}]

readme = "README.md"
license = {text = "MIT"}

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "sphinx",
    "sphinxcontrib-jquery",
    "ipykernel", "traitlets",  # ext.ipython_directive
]

dynamic = ["version"]

[project.urls]
"GitHub" = "https://github.com/kosiokarchev/madox"

[tool.setuptools.packages.find]
include = ["madox*"]

[tool.setuptools_scm]
version_file = "madox/_version.py"
version_scheme = "no-guess-dev"
